# GarminDB

./: MANIFEST.in  Makefile  defines.mk  pyproject.toml
.github/workflows/: pythonapp.yml
